--- a/static/style.css
+++ b/static/style.css
@@ -26,6 +26,7 @@ body {
     position: absolute;
     bottom: 30px;
     right: 30px;
+    
 }
 
 /* CONTENT IS CLOSE */
@@ -35,6 +36,7 @@ body {
     background: #eee;
     width: 300px;
     height: 350px;
+    
     z-index: -123456;
     opacity: 0;
     transition: all .0s ease-in-out;
@@ -100,10 +102,9 @@ body {
 .chatbox__support {
     background: #f9f9f9;
     height: 450px;
-    width: 350px;
+    width: 100vh;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-radius: 20px;
     position: fixed;
     bottom: 70px;
     right: 20px;
@@ -138,7 +139,7 @@ body {
 
 /* Messages */
 .chatbox__messages {
-    padding: 0 20px;
+    padding: 20px;
 }
 
 .messages__item {
@@ -178,7 +179,7 @@ body {
 }
 
 .chatbox__footer input {
-    width: 80%;
+    width:90%;
     border: none;
     padding: 10px 10px;
     border-radius: 30px;
