--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,22 @@
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+       <!-- Font Awesome -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+rel="stylesheet"
+/>
+<!-- Google Fonts -->
+<link
+href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+rel="stylesheet"
+/>
+<!-- MDB -->
+<link
+href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.css"
+rel="stylesheet"
+/>
+
        <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,15 +42,74 @@
 
   <body>
     <div>
-        
-        <nav class="navbar navbar-expand-md navbar-light bg-light border">
-          <img src="http://mnnit.ac.in/images/logonew1.png" style="width:130px; height:68px;" class="navbar-brand-center" alt="MNNIT-ALLAHABAD">
-          <span class="col-md-8 mx-auto text-center">
-          <a class="navbar-brand" href="/"><h5><b>Network Complaint Portal<br/>Computer Center</b></h5></a>
-          </span>
-          
+       
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- Container wrapper -->
+        <div class="container-fluid">
+          <!-- Toggle button -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-mdb-toggle="collapse"
+            data-mdb-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <i class="fas fa-bars"></i>
+          </button>
+      
+          <!-- Collapsible wrapper -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- Navbar brand -->
+            <img src="http://mnnit.ac.in/images/logonew1.png" style="width:130px; height:68px;" class="navbar-brand-center" alt="MNNIT-ALLAHABAD">
+            <span class="col-md-8 mx-auto text-center">
+            <a class="navbar-brand" href="/"><h5><b>Network Complaint Portal<br/>Computer Center</b></h5></a>
+            </span>
+            
+      
+         
+            <!-- Avatar -->
+            <div class="dropdown">
+              <a
+                class="dropdown-toggle d-flex align-items-center hidden-arrow"
+                href="#"
+                id="navbarDropdownMenuAvatar"
+                role="button"
+                data-mdb-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <img
+                  src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
+                  class="rounded-circle"
+                  height="25"
+                  alt="Black and White Portrait of a Man"
+                  loading="lazy"
+                />
+              </a>
+              <ul
+                class="dropdown-menu dropdown-menu-end"
+                aria-labelledby="navbarDropdownMenuAvatar"
+              >
+                <li>
+                  <a class="dropdown-item" href="#">My profile</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Settings</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Logout</a>
+                </li>
+              </ul>
+            </div>
           </div>
+          <!-- Right elements -->
+        </div>
+        <!-- Container wrapper -->
       </nav>
+      <!-- Navbar -->
+
+       
     </div>
     
      
@@ -78,19 +153,19 @@
                     </div>
                     <div class="chatbox__content--header">
                         <h4 class="chatbox__heading--header">Chat support</h4>
-                        <p class="chatbox__description--header">Hi. My name is Sachin. How can I help you?</p>
+                        <p class="chatbox__description--header"></p>
                     </div>
                 </div>
                 <div class="chatbox__messages">
                     <div></div>
                 </div>
-                <div class="chatbox__footer">
-                    <input type="text" placeholder="Write a message...">
-                    <button class="chatbox__send--footer send__button">Send</button>
-                </div>
+                <!-- <div class="chatbox__footer">
+                   <input type="text" id="myInput" placeholder="My internet is not working">
+                     <button class="chatbox__send--footer send__button">Send</button> 
+                </div> -->
             </div>
             <div class="chatbox__button">
-                <button><img src="{{ url_for('static', filename='images/chatbox-icon.svg') }}" /></button>
+                <button><img  width="50vh" height="50vh" src="{{ url_for('static', filename='images/wave.gif') }}" /></button>
             </div>
         </div>
     </div>
@@ -111,7 +186,13 @@
     <script
     $SCRIPT_ROOT = {{ request.script_root|tojson }}>
 </script>
-<script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+<!-- MDB -->
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.2.0/mdb.min.js"
+></script>
+<script type="text/javascript" src="{{ url_for('static', filename='app1.js') }}"></script>
+
   </body>
 </html>
 
@@ -119,47 +200,3 @@
 
 
 
-
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Chatbot</title>
-</head>
-<body>
-<div class="container">
-    <div class="chatbox">
-        <div class="chatbox__support">
-            <div class="chatbox__header">
-                <div class="chatbox__image--header">
-                    <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image">
-                </div>
-                <div class="chatbox__content--header">
-                    <h4 class="chatbox__heading--header">Chat support</h4>
-                    <p class="chatbox__description--header">Hi. My name is Sachin. How can I help you?</p>
-                </div>
-            </div>
-            <div class="chatbox__messages">
-                <div></div>
-            </div>
-            <div class="chatbox__footer">
-                <input type="text" placeholder="Write a message...">
-                <button class="chatbox__send--footer send__button">Send</button>
-            </div>
-        </div>
-        <div class="chatbox__button">
-            <button><img src="{{ url_for('static', filename='images/chatbox-icon.svg') }}" /></button>
-        </div>
-    </div>
-</div>
-
-    <script
-        $SCRIPT_ROOT = {{ request.script_root|tojson }}>
-    </script>
-    <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
-
-</body>
-</html> -->
